[gd_scene load_steps=4 format=3 uid="uid://qpmvsjimoohg"]

[ext_resource type="Script" path="res://scenes/title_overlay.gd" id="1_7xte5"]
[ext_resource type="FontFile" uid="uid://jil4hk24nacm" path="res://fonts/nasalization-rg.ttf" id="2_62b2h"]
[ext_resource type="FontFile" uid="uid://ds4sgve7q3vwl" path="res://fonts/UnutterableItalic-jE2E9.ttf" id="3_mwtl3"]

[node name="TitleOverlay" type="CanvasLayer"]
script = ExtResource("1_7xte5")

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -488.0
offset_top = -400.0
offset_right = 488.0
offset_bottom = -272.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_62b2h")
theme_override_font_sizes/font_size = 128
text = "Asteroid Attack"

[node name="ExitButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -143.0
offset_top = -202.0
offset_right = 144.0
offset_bottom = -130.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_62b2h")
theme_override_font_sizes/font_size = 64
text = "Exit Game"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -281.0
offset_top = -247.0
offset_right = 284.0
offset_bottom = 102.0
grow_horizontal = 2
grow_vertical = 2

[node name="NormalDifficultyButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_62b2h")
theme_override_font_sizes/font_size = 64
text = "Normal
"

[node name="HardDifficultyButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_62b2h")
theme_override_font_sizes/font_size = 64
text = "Hard
"

[node name="SeriouslyDifficultyButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_62b2h")
theme_override_font_sizes/font_size = 64
text = "Seriously ?
"

[node name="HellDifficultyButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.988235, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_mwtl3")
theme_override_font_sizes/font_size = 64
text = "Hell
"
